--- a/beauty-equipment-client/src/App.scss
+++ b/beauty-equipment-client/src/App.scss
@@ -9,6 +9,18 @@ h5 { font-size: 1rem; }
 h6 { font-size: 0.875rem; }
 p  { font-size: 0.75rem; }
 
+// Similar global button
+.btn {
+    font-size: 0.75rem;
+    padding: 0.6rem 1.5rem;
+    background: linear-gradient(180deg, $red-light 0%, $red 80.21%);
+    border: none;
+}
+
+.btn:hover {
+    background: linear-gradient(180deg, $red-dark 0%, $red 80.21%);
+}
+
 .navbar {
 
     .nav-item {
@@ -29,35 +41,11 @@ p  { font-size: 0.75rem; }
     margin-top: 3rem;
     margin-bottom: 3rem;
 
-    .img-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        img {
-            display: block;
-            margin: auto;
-            max-width: 100%;
-            max-height: 90%;
-        }
-    }
-
     #headline-left {
 
         #headline-text {
             text-align: justify;
             z-index: 10;
-        }
-        
-        .btn {
-            font-size: 0.75rem;
-            padding: 0.6rem 1.5rem;
-            background: linear-gradient(180deg, $red-light 0%, $red 80.21%);
-            border: none
-        }
-
-        .btn:hover {
-            background: linear-gradient(180deg, $red-dark 0%, $red 80.21%);
         }
 
         .btn-sm { width: 100%; } 
@@ -97,6 +85,20 @@ p  { font-size: 0.75rem; }
     
 }
 
+
+.img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        display: block;
+        margin: auto;
+        max-width: 100%;
+        max-height: 90%;
+    }
+}
+
 #img-about-top {
     display: block;
     margin: auto;
@@ -130,4 +132,35 @@ p  { font-size: 0.75rem; }
         border-radius: 6px;
         overflow-y: scroll;
    }    
+}
+
+#products {
+    .btn-icon {
+        width: fit-content !important;
+        padding: 0.4rem 0.6rem;
+        margin: 0.2rem;
+        font-size: 0.6rem;
+        background-color: $red;
+        color: white;
+        -webkit-text-stroke: 1px;
+    }
+
+    .col * { pointer-events: none; }
+
+    h6 { text-transform: uppercase; }
+
+    p { text-align: justify; }
+
+    .react-read-more-read-less {
+        display: block;
+        color: $red;
+        text-decoration: underline;
+        margin-top: 0.5rem;
+    }
+
+    .btn { 
+        width: 100%;
+        pointer-events: all;
+    }
+
 }
