--- a/beauty-equipment-client/src/App.scss
+++ b/beauty-equipment-client/src/App.scss
@@ -127,14 +127,15 @@ p  { font-size: 0.75rem; }
    #about-content {
         padding: 1rem 2rem;
         max-height: 100%;
-        background: rgba(255, 255, 255, 0.6);
-        backdrop-filter: blur(15px);
+        background: rgba(255, 255, 255, 0.75);
+        backdrop-filter: blur(5px);
         border-radius: 6px;
         overflow-y: scroll;
    }    
 }
 
 #products {
+
     .btn-icon {
         width: fit-content !important;
         padding: 0.4rem 0.6rem;
@@ -156,6 +157,7 @@ p  { font-size: 0.75rem; }
         color: $red;
         text-decoration: underline;
         margin-top: 0.5rem;
+        pointer-events: all;
     }
 
     .btn { 
@@ -163,4 +165,80 @@ p  { font-size: 0.75rem; }
         pointer-events: all;
     }
 
+}
+
+#img-promo-top {
+    display: block;
+    max-width: 100%;
+}
+
+#promo {
+    background-color: #F5F6FC;
+    height: 16rem;
+    display: flex;
+    align-items: center;
+
+    figure {
+        z-index: 0;
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        width: 100%;
+        
+        #promo-frame { height: 15rem; }
+        #promo-plant { height: 8rem; }
+    }
+
+    .row {
+        z-index: 10;
+        padding: 1.5rem 2rem;
+        height: fit-content;
+        background: rgba(255, 255, 255, 0.75);
+        backdrop-filter: blur(5px);
+        border-radius: 6px;
+
+        #promo-time {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h5 { color: #B8B8B8; }
+            span {
+                font-size: 1.5rem;
+                font-weight: bold;
+                color: $red;
+            }
+
+        }
+    }
+
+   
+    
+
+    
+}
+
+#advantages {
+    display: block;
+
+    .advantages-inner {
+
+        .col {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+        
+        i {
+            font-size: 3rem;
+            color: $red;
+            margin: 0.5rem;
+        }
+
+    }
 }
