--- a/beauty-equipment-client/src/App.scss
+++ b/beauty-equipment-client/src/App.scss
@@ -235,6 +235,11 @@ form {
         backdrop-filter: blur(5px);
         border-radius: 6px;
 
+        .btn-sm {
+            width: 100%;
+            justify-content: center;
+        } 
+
         #promo-time {
             display: flex;
             flex-direction: column;
@@ -377,5 +382,29 @@ footer {
 
     a:hover { 
         color: $red; 
+    }
+}
+
+#modal-cookies {
+    p { 
+        text-align: center;
+        font-size: 1rem;
+        color: gray;
+    }
+    
+    .row {
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+
+        .btn {
+            color: black;
+            font-weight: bold;
+            background: #FCBA7F;
+        }
+
+        a {
+            color: #FCBA7F;
+        }
     }
 }
