--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -219,6 +219,10 @@ form {
         pointer-events: all;
     }
 
+    img {
+        max-width: 80%;
+        max-height: 80%;
+    }
 }
 
 #img-promo-top {
